Thinner fonts on Firefox for OS X and fix <code> line-height

--- a/assets/less/style.less
+++ b/assets/less/style.less
@@ -37,7 +37,9 @@ code, kbd, pre, samp {
 }
 
 code {
-  font-size: 0.85em;
+  @font-size: 0.85em;
+  font-size: @font-size;
+  line-height: @font-size * @base-line-height;
   color: @code-foreground;
 }
 
