--- a/assets/less/typography.less
+++ b/assets/less/typography.less
@@ -47,6 +47,7 @@ html, body {
   font-size: @base-font-size;
   line-height: @base-font-size * @base-line-height;
   -webkit-font-smoothing: antialiased;
+  -moz-osx-font-smoothing: grayscale;
 }
 
 p  { .ms(0, 0, 0); }
